Change pages to describe project, and their purpose

--- a/projects/p1/thing.html
+++ b/projects/p1/thing.html
@@ -6,10 +6,8 @@
 <body>
 <h1>Thing About Projects</h1>
 <p>
-  Blah blah blah.
-</p>
-<p>
-  Lorem ipsum dolor sit amet.
+  It's nested in /projects/p1/, which is a good test for arbitrary-depth
+  searching for html files that shouldn't be processed.
 </p>
 </body>
 </html>
