--- a/projects/p1/thing.html
+++ b/projects/p1/thing.html
@@ -1,13 +1,12 @@
 <html>
 <head>
-  <meta charset="utf-8">
   <title>Thing About Projects</title>
 </head>
 <body>
 <h1>Thing About Projects</h1>
 <p>
-  It's nested in /projects/p1/, which is a good test for arbitrary-depth
-  searching for html files that shouldn't be processed.
+  Being nested in /projects/p1/ is a good test for arbitrary-depth searching for
+  html files that shouldn't be processed.
 </p>
 </body>
 </html>
