--- a/deploy/projects/p1/entry.html
+++ b/deploy/projects/p1/entry.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 <h1 id="entry-inside-p1">Entry Inside P1</h1>
-<p>This is a page with things on it. They might be interesting, or not.</p>
+<p>This is a page with things on it. They might be interesting, or not. But it's<br />
+nested in <code>/projects/p1/</code>, which is a good test for arbitrary-depth searching for<br />
+markdown files.</p>
 </body>
 </html>
